# multi_armed_lang_learning

./: .gitignore  Architecture.md  README.md  config.example.yaml  pyproject.toml
arms/: arms.yaml
lang_data/logs/es/: events.jsonl
lang_data/logs/es/codex/: 20260306-183844.jsonl  20260306-184117.jsonl  20260306-185500.jsonl  (+2 more)
lang_data/logs/it/: events.jsonl
lang_data/state/es/: bandit_state.json  learner_profile.json  skill_state.json
lang_data/state/it/: bandit_state.json  cefr_history.jsonl  cefr_state.json  conversation_focus.json  learner_profile.json  session_metrics.jsonl  skill_history.jsonl  skill_state.json
src/language_learning/: config.py
src/language_learning/cli/: main.py
src/language_learning/controller/: controller.py  llm_client.py
src/language_learning/core/: bandit.py  cefr.py  compression.py  focus.py  reward.py  skills.py  storage.py
src/language_learning/discord/: bot.py
src/language_learning/models/: arms.py  cefr_state.py  evaluation.py  events.py  session_context.py  skill_state.py  state.py
src/language_learning/reporting/: progress_reports.py
src/language_learning/storage/: __init__.py  base.py  filesystem.py  memory.py
src/language_learning/tui/: app.py  widgets.py
src/language_learning/web/: server.py
tests/: test_bandit.py  test_cefr.py  test_compression.py  test_config.py  test_controller.py  test_focus.py  test_llm_client.py  test_models.py  test_reports.py  test_reward.py  test_server.py  test_server_live.py  test_session_context.py  test_skills.py  test_storage.py  test_storage_backend.py
(+4 files in other folders)
