[project]
name = "language-learning"
version = "0.2.0"
description = "Adaptive conversational language tutor with UCB1 bandit and LiteLLM"
requires-python = ">=3.11,<3.13"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "litellm>=1.0",
    "textual>=0.40",
    "matplotlib>=3.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
]

[project.scripts]
language-tutor = "language_learning.cli.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: requires live LLM endpoint (run with -m integration)",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
    "httpx>=0.27",
]
